--- a/config/database.yml
+++ b/config/database.yml
@@ -22,4 +22,7 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: postgresql-perpendicular-9497
+  pool: 5
+  timeout: 5000
